Add web service configuration for pdf-editor

--- a/render.yaml
+++ b/render.yaml
@@ -1,1 +1,10 @@
+services:
+  - type: web
+    name: pdf-editor
+    env: docker
+    plan: free
+    region: oregon
+    rootDir: backend
+    dockerfilePath: Dockerfile
+
 
