--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,7 @@
 services:
   - type: web
-    name: pdf-editor
-    env: docker
-    plan: free
-    region: oregon
-    rootDir: backend
-    dockerfilePath: Dockerfile
-
-
+    name: career-portel
+    env: java
+    root: fake-news-java
+    buildCommand: ./gradlew build
+    startCommand: java -jar build/libs/yourapp.jar
