--- a/render.yaml
+++ b/render.yaml
@@ -3,5 +3,5 @@ services:
     name: career-portel
     env: java
     root: fake-news-java
-    buildCommand: ./gradlew build
-    startCommand: java -jar build/libs/yourapp.jar
+    buildCommand: mvn clean package
+    startCommand: java -jar target/fake-news-java-0.0.1-SNAPSHOT.jar
