--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,8 @@
 services:
   - type: web
     name: career-portel
-    env: java
-    root: fake-news-java
-    buildCommand: mvn clean package
-    startCommand: java -jar target/<exact-jar-name>.jar
+    env: docker
+    plan: free
+    region: oregon
+    rootDir: fake-news-java
+    dockerfilePath: Dockerfile
