--- a/render.yaml
+++ b/render.yaml
@@ -1,8 +1,8 @@
 services:
   - type: web
-    name: career-portel
-    env: docker
+    name: fake-news-java
+    runtime: docker
     plan: free
-    region: oregon
     rootDir: fake-news-java
     dockerfilePath: Dockerfile
+
