--- a/fake-news-java/Dockerfile
+++ b/fake-news-java/Dockerfile
@@ -1,16 +1,13 @@
-FROM eclipse-temurin:21-jdk-alpine
-
+# Build stage
+FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
+COPY pom.xml .
+COPY src ./src
+RUN mvn clean package -DskipTests
 
-# Copy everything (including .mvn and mvnw)
-COPY . .
-
-# Make mvnw executable and build
-RUN chmod +x ./mvnw && ./mvnw clean package -DskipTests
-
-# Port setup for Render
-ENV PORT=8080
+# Run stage
+FROM eclipse-temurin:17-jdk-alpine
+WORKDIR /app
+COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
-
-# Run the JAR (note: check the exact jar name in target/)
-CMD ["sh", "-c", "java -jar target/backend-0.0.1-SNAPSHOT.jar --server.port=${PORT}"]
+CMD ["java", "-jar", "app.jar"]
