--- a/fake-news-java/Dockerfile
+++ b/fake-news-java/Dockerfile
@@ -1,13 +1,26 @@
 # Build stage
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
+
+# Copy pom.xml and download dependencies first (better caching)
 COPY pom.xml .
+RUN mvn dependency:go-offline -B
+
+# Copy the rest of the source code
 COPY src ./src
+
+# Build the application
 RUN mvn clean package -DskipTests
 
 # Run stage
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
+
+# Copy the built jar from the build stage
 COPY --from=build /app/target/*.jar app.jar
+
+# Expose port (default Spring Boot is 8080)
 EXPOSE 8080
-CMD ["java", "-jar", "app.jar"]
+
+# Run the application
+ENTRYPOINT ["java", "-jar", "app.jar"]
