--- a/fake-news-java/Dockerfile
+++ b/fake-news-java/Dockerfile
@@ -2,12 +2,8 @@
 FROM maven:3.9.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy pom.xml and download dependencies
-COPY pom.xml .
-RUN mvn dependency:go-offline -B
-
-# Copy source code
-COPY src ./src
+# Copy all project files (not just pom.xml and src)
+COPY . .
 
 # Build the application
 RUN mvn clean package -DskipTests
@@ -16,11 +12,8 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
-# Copy built jar
-COPY --from=build /app/target/*.jar app.jar
+# Copy the built jar (use exact name if possible)
+COPY --from=build /app/target/career-portel-0.0.1-SNAPSHOT.jar app.jar
 
-# Expose port (Spring Boot default is 8080)
 EXPOSE 8080
-
-# Run the application
 ENTRYPOINT ["java", "-jar", "app.jar"]
