--- a/fake-news-java/Dockerfile
+++ b/fake-news-java/Dockerfile
@@ -1,19 +1,18 @@
-# Build stage
-FROM maven:3.9.6-eclipse-temurin-17 AS build
+# Step 1: Build stage
+FROM maven:3.8.6-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy all project files (not just pom.xml and src)
-COPY . .
+COPY pom.xml .
+COPY src ./src
 
-# Build the application
-RUN mvn clean package -DskipTests
+RUN mvn -e -X -DskipTests=true clean package
 
-# Run stage
-FROM eclipse-temurin:17-jdk-alpine
+# Step 2: Run stage
+FROM eclipse-temurin:17-jdk
 WORKDIR /app
 
-# Copy the built jar (use exact name if possible)
-COPY --from=build /app/target/career-portel-0.0.1-SNAPSHOT.jar app.jar
+COPY --from=build /app/target/*.jar app.jar
 
 EXPOSE 8080
+
 ENTRYPOINT ["java", "-jar", "app.jar"]
